# lysandra-launcher

./: .env  .gitignore  MIGRATION_GUIDE.md  README.md  SCRIPTS.md  eslint.config.mjs  hero.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.cursor/rules/: conventions.mdc
.github/workflows/: publish.yml  release.yml
.taskmaster/docs/: prd.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  tasks.json  tasks.json.bak
docs/: diagnostic-installation-issues.md
documentation/: DIRECTORY_STRUCTURE_REFACTOR.md  DOWNLOAD_PROGRESS_IMPROVEMENTS.md  GAME_STATE_MACHINE.md
src/: App.tsx  content.tsx  i18n.ts  main.tsx  provider.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json  desktop.json  file-system.json  notification.json  opener.json  process.json  store.json  updater.json  upload.json  windows-permissions.json
src-tauri/src/: download_manager.rs  game_detection.rs  hash.rs  lib.rs  path_manager.rs  updater_manager.rs  windows_permissions.rs  zip.rs
src-tauri/windows/: hooks.nsi
src-tauri/windows/fragments/: registry.wxs
src/components/: DownloadManager.tsx  LanguageDetectionTest.tsx  app-settings-modal.tsx  drag-zone.tsx  game-actions.tsx  game-infos.tsx  game-settings-modal.tsx  index.ts  news-carousel.tsx  (+5 more)
(+118 files in other folders)
