[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
sha2 = "0.10.8"
zip = "3.0.0"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-upload = "2"
tauri-plugin-http = "2.4.3"
tauri-plugin-fs = "2.3.0"
tauri-plugin-notification = "2"
tauri-plugin-os = "2.2.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"


